<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/on_background"
    android:id="@+id/custom_reorder_dialog"
    android:padding="25dp">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:gravity="start"
            android:layout_height="wrap_content"
            android:text="@string/reorder_list"
            android:textAppearance="@style/TextAppearance.AppTheme.HeadLine2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

                <RadioButton
                    android:id="@+id/radio_order_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layoutDirection="rtl"
                    android:onClick="onRadioButtonClicked"
                    android:paddingStart="60dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/reorder_by_title"
                    android:textAlignment="textStart" />

                <RadioButton
                    android:id="@+id/radio_order_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layoutDirection="rtl"
                    android:onClick="onRadioButtonClicked"
                    android:paddingStart="60dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/reorder_by_date"

                    android:textAlignment="textStart" />

        </RadioGroup>

        <Button
            android:id="@+id/btn_apply"
            style="@style/Theme.Widgets.Button.Filled.MainBrandColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/apply"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <Button
            android:id="@+id/btn_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/transparent"
            android:text="@string/reset"
            android:textColor="#FFF"
            style="@style/Theme.Widgets.Button.Filled.MainBrandColor"
            app:layout_constraintHorizontal_bias="0.355"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_apply" />


</androidx.constraintlayout.widget.ConstraintLayout>